// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useMotiWithStyleProps transforms Moti 'animate' props correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "backgroundColor": "#ffc0cb",
          "padding": 12,
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#ffc0cb",
        "padding": 12,
        "transform": Array [],
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'exit' props correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "transform": Array [],
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'exitTransition' props correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "transform": Array [],
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'from' props correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "backgroundColor": "#ffc0cb",
          "padding": 12,
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#ffc0cb",
        "padding": 12,
        "transform": Array [],
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'state' props correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "transform": Array [],
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'transition' props correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "transform": Array [],
      }
    }
  />
</View>
`;
